simple quiz application completed

--- a/JS PROJECTS/ToDO app/index.html
+++ b/JS PROJECTS/ToDO app/index.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 
     <style>
+        .a{
+            background-color: teal;
+        }
+
+        .b{
+            color: white;
+        }
+
+        .c{
+            border-radius: 40px;
+        }
        
         ul li {
             list-style: none;
