--- a/Practice/index.html
+++ b/Practice/index.html
@@ -44,7 +44,8 @@
     </ul>
 
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="aap2.js"></script>
 </body>
 
 </html>
